fixed scrollbar gutter

--- a/source/CSS/XUI/Core.css
+++ b/source/CSS/XUI/Core.css
@@ -173,6 +173,7 @@
 		}
 
 		html{
+			scrollbar-gutter: stable;
 			scroll-behavior: smooth;
 			scroll-padding: var(--header-height);
 		}
